# esp32-LED-driver

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  test_data.json  test_data.rgb
main/: CMakeLists.txt  Kconfig.projbuild  led_strip_ctl.c  led_strip_ctl.h  led_strip_encoder.c  main.c  mount.c  mount.h  root.html  webserver.c  webserver.h  wifi.c  wifi.h
